--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 				<br>
 				
 				<p>Selected people: <em class="selected-users" id="selected-users"></em></p>
-				<p>Selected tags: <em class="selected-tags" id="selected-tags"></em></p>
+				<p><em class="selected-tags" id="selected-tags"></em></p>
 				
 				<div>
-					<a class="pat-tooltip" data-pat-tooltip="position: tl; source: ajax; class: mentions;" href="/panel_mentions.html#content">Add people</a> -
-					<a class="pat-tooltip" data-pat-tooltip="position: tl; source: ajax; class: tags;" href="/panel_tags.html#content">Add tags</a>
+					<a class="pat-tooltip" data-pat-tooltip="position: tl; source: ajax; class: mentions;" href="/static/panel_mentions.html#content">Add people</a> -
+					<a class="pat-tooltip" data-pat-tooltip="position: tl; source: ajax; class: tags;" href="/static/panel_tags.html#content">Add tags</a>
 				</div>
 
 		</div>
