--- a/static/panel_tags.html
+++ b/static/panel_tags.html
@@ -12,7 +12,7 @@
         <form id="items"
               action="#selected-tags"
               class="search-result tags pat-autosubmit pat-tagger" 
-              data-pat-tagger="source: label.item.tag;target: em#selected-tags;prepend: #">
+              data-pat-tagger="source: label.item.tag;target: em#selected-tags;prepend: #;listprepend:Selected tags: ">
           <fieldset data-pat-checklist="select: #status-tag-selector .select-all; deselect: #status-tag-selector .deselect-all"
                     class="checklist pat-checklist tags unchecked">
             <label class="item tag has-no-description">
